fix unnecessary scrollbar

--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,12 @@
 html,body {
     height: 100%;
 }
+
+#title {
+    text-align: center;
+    height: 50px;
+}
+
+#main {
+    height: calc(100% - 50px);
+}
